# Angpao

./: .env.example  .npmrc  .vercelignore  README.md  instrumentation.ts  package-lock.json  package.json  playwright.config.ts  pnpm-workspace.yaml
.github/workflows/: ci.yml
app/: globals.css  manifest.ts
app/[locale]/: layout.tsx  not-found.tsx
contracts/: Cargo.toml  DEPLOYMENT.md  Makefile  README.md
contracts/angpao-escrow/: Cargo.toml
contracts/angpao-escrow/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/angpao-escrow/test_snapshots/test/: claim_after_expiry_is_rejected_then_sender_refunds.1.json  create_is_blocked_while_paused.1.json  double_claim_by_same_recipient_is_rejected.1.json  equal_split_pays_each_slot_evenly.1.json  invalid_create_parameters_are_rejected.1.json  random_split_sums_to_total_and_each_positive.1.json  refund_before_expiry_is_rejected.1.json  single_recipient_claims_full_amount.1.json  wrong_preimage_is_rejected.1.json
docs/: API.md  ARCHITECTURE.md  FE_PROGRESS.md  HUB_HANDOFF.md  PAYMENT_HUB_PLAN.md  README.md  SEP24_SEP38.md  SETUP.md  SMOKE_TEST.md  SUBMISSION.md  TS_STYLE_GUIDE.md  Universal Merchant Payment Hub.md  WALLET_ACTIONS.md  WALLET_CONNECTION_TEST_REPORT.md  anchors.md  postman_collection.json  sep-12-24-summary.md  stellar-developer-portal-summary.md
drizzle/: 0000_young_odin.sql  0001_giant_goliath.sql  0001_init.sql  0002_wallets_owner.sql
messages/: en.json  vi.json
scripts/: apply-missing.mjs  capture-prod-shots.mjs  seed-demo.ts  take-screenshots.js
tests/: setup.ts
(+216 files in other folders)
