[package]
name = "angpao-escrow"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Soroban escrow for hashlocked, time-locked, multi-slot USDC red envelopes (Angpao)."

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }
